# iris-task

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
classifier/: article_classifier.py
classifier/tools/: common.py  create_sample.py  trainer.py
classifier_web/: apps.py  asgi.py  settings.py  views.py  wsgi.py
classifier_web/templates/: index.html
data/: small-sample-json.json
