[tool.poetry]
name = "iris-task"
version = "0.1.0"
description = "Take home task"
authors = ["Lilia Milanova <lilia.milanova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "2.16.2"
pandas = "2.2.3"
numpy = "1.26.4"
keras = "3.7.0"
thinc = "8.2.5"
spacy = "3.7.5"
matplotlib = "3.9.3"
seaborn = "0.13.2"
wordcloud = "1.9.4"
nltk = "3.9.1"
scikit-learn = "1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
