[tool.poetry]
name = "iris-task"
version = "0.1.0"
description = "Take home task"
authors = ["Lilia Milanova"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.16"
tensorflow-macos = "2.15.0"
numpy = "1.26.4"
transformers = "^4.47.0"
tensorflow-metal = "^1.1.0"
matplotlib = "3.9.2"
datasets = "^3.2.0"
scikit-learn = "^1.6.0"
scikit-multilearn = "^0.2.0"
pandas = "^2.2.3"
accelerate = "^1.2.0"
nltk = "^3.9.1"
wordcloud = "^1.9.4"
torch = "^2.5.1"
django = "^5.1.4"
optuna = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
